# EdTech-Dashboard

./: .gitignore  .vercelignore  leetcode.py  main.py  pyproject.toml  requirements.txt  vercel.json
static/: codebase_audit.md  placement.css  setting.json
static/js/: placement.js
templates/: 404.html  500.html  certificates.html  dashboard.html  index.html  login.html  mock.html  mock_fixed.html  results.html  results_dashboard.html
test/: audio_test.py  e2e_test.py  linear vs parallel workflow latency test.py  results_test.py  test.ipynb
utils/: answer.py  app.py  ats.py  db.py  graphs.py  llms.py  models.py  output_models.py  prompt.py  stats.py  verification.py
