[project]
name = "placement-readiness-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "flask>=3.1.2",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "requests>=2.32.5",
    "spacy>=3.8.7",
    "streamlit>=1.51.0",
    "whisper>=1.1.10",
]
